--- a/package.json
+++ b/package.json
@@ -12,22 +12,52 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@nanostores/persistent": "^0.10.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^9.6.0",
+		"@tailwindcss/typography": "^0.5.14",
+		"@types/cookie": "^0.6.0",
+		"@types/eslint": "^9.6.1",
+		"@types/web": "^0.0.162",
+		"autoprefixer": "^10.4.20",
+		"cookie": "^0.6.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-html": "^8.1.1",
 		"eslint-plugin-svelte": "^2.36.0",
+		"eslint-plugin-tailwindcss": "^3.17.4",
 		"globals": "^15.0.0",
+		"joi": "^17.13.3",
+		"lucide-svelte": "^0.439.0",
+		"nanostores": "^0.11.3",
+		"pocketbase": "^0.21.5",
+		"postcss": "^8.4.45",
+		"postcss-import": "^16.1.0",
+		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.1.1",
+		"prettier-plugin-organize-attributes": "^1.0.0",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"radashi": "^12.1.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"sveltekit-i18n": "^2.4.2",
+		"sveltekit-superforms": "^2.17.0",
+		"tailwindcss": "^3.4.9",
+		"tslib": "^2.7.0",
+		"tslog": "^4.9.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vite-plugin-webfont-dl": "^3.9.5"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
+	"packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247",
+	"dependencies": {
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.5.2",
+		"tailwind-variants": "^0.2.1"
+	}
 }
