--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,130 @@
-node_modules
-
-# Output
-.output
-.vercel
-/.svelte-kit
-/build
-
-# OS
+._*
+.apdisk
+.AppleDB
+.AppleDesktop
+.AppleDouble
+.cache
+.cache/
+.com.apple.timemachine.donotpresent
+.directory
+.DocumentRevisions-V100
+.docusaurus
 .DS_Store
-Thumbs.db
-
-# Env
+.dynamodb/
 .env
 .env.*
-!.env.example
-!.env.test
-
-# Vite
+.env.development.local
+.env.local
+.env.production.local
+.env.test.local
+.eslintcache
+.fseventsd
+.fuse_hidden*
+.fusebox/
+.grunt
+.history
+.history/
+.ionide
+.lock-wscript
+.LSOverride
+.next
+.nfs*
+.node_repl_history
+.npm
+.nuxt
+.nyc_output
+.overmind.sock
+.parcel-cache
+.pnp.*
+.pnpm-debug.log*
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.sentryclirc
+.serverless/
+.Spotlight-V100
+.stylelintcache
+.svelte-kit/*
+.temp
+.TemporaryItems
+.tern-port
+.Trash-*
+.Trashes
+.VolumeIcon.icns
+.vscode-test
+.vscode/*
+.vuepress/dist
+.webpack/
+.yarn-integrity
+.yarn/build-state.yml
+.yarn/cache
+.yarn/install-state.gz
+.yarn/unplugged
+[Dd]esktop.ini
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
+*.BACKUP.*
+*.BASE.*
+*.cab
+*.icloud
+*.lcov
+*.lnk
+*.LOCAL.*
+*.log
+*.msi
+*.msix
+*.msm
+*.msp
+*.orig
+*.pid
+*.pid.lock
+*.REMOTE.*
+*.seed
+*.stackdump
+*.tgz
+*.tsbuildinfo
+*.vsix
+*~
+build/
+dev-dist/
+old_data/
+package/
+pb_data/*
+$RECYCLE.BIN/
+bower_components
+coverage
+dist
+ehthumbs_vista.db
+ehthumbs.db
+Icon
+jspm_packages/
+lerna-debug.log*
+lib-cov
+logs
+Network Trash Folder
+node_modules
+node_modules/
+npm-debug.log*
+out
+package
+pb_data.zip
+pids
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+Temporary Items
+Thumbs.db
+Thumbs.db:encryptable
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+web_modules/
+yarn-debug.log*
+yarn-error.log*
+!.env.example
+!.vscode/*.code-snippets
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
+!.vscode/tasks.json
+pb_*
