--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,6 @@
-# Package Managers
-package-lock.json
+# Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
+package-lock.json
 yarn.lock
+pb_data/
+pb_migrations/
