--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "highholidays",
+	"name": "high-holidays",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@leeoniya/ufuzzy": "^1.0.14",
 		"@nanostores/persistent": "^0.10.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.2",
@@ -22,10 +23,12 @@
 		"@types/eslint": "^9.6.1",
 		"@types/web": "^0.0.162",
 		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"cookie": "^0.6.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-html": "^8.1.1",
+		"eslint-plugin-perfectionist": "^3.5.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"eslint-plugin-tailwindcss": "^3.17.4",
 		"globals": "^15.0.0",
@@ -45,7 +48,10 @@
 		"svelte-check": "^4.0.0",
 		"sveltekit-i18n": "^2.4.2",
 		"sveltekit-superforms": "^2.17.0",
+		"tailwind-merge": "^2.5.2",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.7.0",
 		"tslog": "^4.9.3",
 		"typescript": "^5.0.0",
@@ -54,10 +60,5 @@
 		"vite-plugin-webfont-dl": "^3.9.5"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247",
-	"dependencies": {
-		"clsx": "^2.1.1",
-		"tailwind-merge": "^2.5.2",
-		"tailwind-variants": "^0.2.1"
-	}
+	"packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
