--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@eslint/eslintrc": "^3.1.0",
+		"@eslint/js": "^9.10.0",
 		"@leeoniya/ufuzzy": "^1.0.14",
 		"@nanostores/persistent": "^0.10.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -31,7 +33,7 @@
 		"eslint-plugin-perfectionist": "^3.5.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"eslint-plugin-tailwindcss": "^3.17.4",
-		"globals": "^15.0.0",
+		"globals": "^15.9.0",
 		"joi": "^17.13.3",
 		"lucide-svelte": "^0.439.0",
 		"nanostores": "^0.11.3",
@@ -40,7 +42,6 @@
 		"postcss-import": "^16.1.0",
 		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.1.1",
-		"prettier-plugin-organize-attributes": "^1.0.0",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"radashi": "^12.1.0",
