--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/eslint": "^9.6.1",
 		"@types/web": "^0.0.162",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cookie": "^0.6.0",
 		"eslint": "^9.0.0",
