--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
 		"vite-plugin-webfont-dl": "^3.9.5"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
+	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
+	"dependencies": {
+		"mode-watcher": "^0.4.1",
+		"svelte-sonner": "^0.3.27"
+	}
 }
