--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
 	"name": "high-holidays",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
 		"build": "vite build",
 		"build:types": "pnpx pocketbase-typegen --db ./pb_data/data.db --out ./src/lib/types.d.ts",
-		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"dev": "vite dev",
+		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"preview": "vite preview"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.1.0",
@@ -25,7 +26,6 @@
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/cookie": "^0.6.0",
 		"@types/eslint": "^9.6.1",
-		"@types/joi": "^17.2.3",
 		"@types/web": "^0.0.162",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.13",
@@ -37,9 +37,11 @@
 		"eslint-plugin-perfectionist": "^3.5.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"eslint-plugin-tailwindcss": "^3.17.4",
+		"formsnap": "^1.0.1",
 		"globals": "^15.9.0",
 		"joi": "^17.13.3",
 		"lucide-svelte": "^0.439.0",
+		"mode-watcher": "^0.4.1",
 		"nanostores": "^0.11.3",
 		"pocketbase": "^0.21.5",
 		"postcss": "^8.4.45",
@@ -51,6 +53,7 @@
 		"radashi": "^12.1.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.27",
 		"sveltekit-i18n": "^2.4.2",
 		"sveltekit-superforms": "^2.17.0",
 		"tailwind-merge": "^2.5.2",
@@ -62,14 +65,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"vite-plugin-webfont-dl": "^3.9.5"
+		"vite-plugin-webfont-dl": "^3.9.5",
+		"wait-for-the-element": "^4.0.2"
 	},
-	"type": "module",
-	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
-	"dependencies": {
-		"formsnap": "^1.0.1",
-		"mode-watcher": "^0.4.1",
-		"svelte-sonner": "^0.3.27",
-		"zod": "^3.23.8"
-	}
+	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
