--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
 		"strict": true,
 		"moduleResolution": "bundler",
 		"noImplicitAny": false,
-		"lib": ["DOM", "ESNext"],
-		"types": ["joi"]
+		"lib": ["DOM", "ESNext"]
 	}
 }
