--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.18",
 		"cookie": "^0.6.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
