--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"cookie": "^0.6.0",
+		"country-state-city": "^3.2.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-html": "^8.1.1",
