--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"formsnap": "^1.0.1",
 		"globals": "^15.9.0",
 		"joi": "^17.13.3",
-		"lucide-svelte": "^0.439.0",
+		"lucide-svelte": "^0.441.0",
 		"mode-watcher": "^0.4.1",
 		"nanostores": "^0.11.3",
 		"pocketbase": "^0.21.5",
@@ -55,6 +55,7 @@
 		"radashi": "^12.1.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"svelte-maplibre": "^0.9.13",
 		"svelte-sonner": "^0.3.27",
 		"sveltekit-i18n": "^2.4.2",
 		"sveltekit-superforms": "^2.17.0",
