--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
 	"i18n-ally.localesPaths": ["src/lib/i18n"],
-	"cSpell.words": ["bima", "sonner"]
+	"cSpell.words": ["bima", "maplibre", "sonner"]
 }
