--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"radashi": "12.2.0-beta.af825f4",
+		"radashi": "12.1.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"svelte-maplibre": "^0.9.13",
