--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"strict": true,
 		"moduleResolution": "bundler",
 		"noImplicitAny": false,
-		"lib": ["DOM", "ESNext"]
+		"lib": ["DOM", "ESNext"],
+		"types": ["node", "web"]
 	}
 }
