--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/cookie": "^0.6.0",
 		"@types/eslint": "^9.6.1",
+		"@types/node": "^22.5.5",
 		"@types/web": "^0.0.162",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.13",
@@ -33,6 +34,7 @@
 		"cmdk-sv": "^0.0.18",
 		"cookie": "^0.6.0",
 		"country-state-city": "^3.2.1",
+		"dotenv": "^16.4.5",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-html": "^8.1.1",
