--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/eslint": "^9.6.1",
 		"@types/node": "^22.5.5",
 		"@types/web": "^0.0.162",
+		"@vite-pwa/sveltekit": "^0.6.5",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
