--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"cookie": "^0.6.0",
+		"country-state-city": "^3.2.1",
 		"dotenv": "^16.4.5",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -69,6 +70,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
+		"vite-plugin-pwa": "^0.20.5",
 		"vite-plugin-webfont-dl": "^3.9.5",
 		"wait-for-the-element": "^4.0.2"
 	},
