--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,13 @@
 		"moduleResolution": "bundler",
 		"noImplicitAny": false,
 		"lib": ["DOM", "ESNext"],
-		"types": ["node", "web", "vite-plugin-pwa/svelte", "vite-plugin-pwa/info"]
+		"types": [
+			"node",
+			"web",
+			"vite-plugin-pwa/svelte",
+			"vite-plugin-pwa/info",
+			"vite-plugin-pwa/client",
+			"vite-plugin-pwa/pwa-assets"
+		]
 	}
 }
