--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,11 @@
 		"lib": ["DOM", "ESNext"],
 		"types": [
 			"node",
-			"web",
-			"vite-plugin-pwa/svelte",
-			"vite-plugin-pwa/info",
-			"vite-plugin-pwa/client",
-			"vite-plugin-pwa/pwa-assets"
+			"web"
+			// "vite-plugin-pwa/svelte",
+			// "vite-plugin-pwa/info",
+			// "vite-plugin-pwa/client",
+			// "vite-plugin-pwa/pwa-assets"
 		]
 	}
 }
