--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@leeoniya/ufuzzy": "^1.0.14",
 		"@nanostores/persistent": "^0.10.2",
 		"@poppanator/sveltekit-svg": "^4.2.1",
+		"@prosopo/server": "^2.0.3",
 		"@sveltejs/adapter-vercel": "^5.4.3",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
