--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"eslint-plugin-perfectionist": "^3.5.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"eslint-plugin-tailwindcss": "^3.17.4",
+		"fast-string-truncated-width": "^1.1.0",
 		"formsnap": "^1.0.1",
 		"globals": "^15.9.0",
 		"lucide-svelte": "^0.441.0",
